--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
 	],
 	"minimum-stability": "dev",
 	"require": {
-		"php": ">=7.2",
-		"yiisoft/yii2": "*"
+		"php": ">=7.2"
 	},
 	"autoload": {
 		"psr-4": {
