--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 		"php",
 		"jcbowen"
 	],
-	"type": "library",
+	"type": "yii2-extension",
 	"license": "MIT",
 	"authors": [
 		{
@@ -19,11 +19,12 @@
 	],
 	"minimum-stability": "dev",
 	"require": {
-		"php": ">=7.2"
+		"php": ">=7.0",
+		"yiisoft/yii2": "*"
 	},
 	"autoload": {
 		"psr-4": {
-			"jcbowen\\swoole\\": "./src"
+			"jcbowen\\yiiswoole\\websocket\\": "./src/websocket"
 		}
 	}
 }
