--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
 	"minimum-stability": "dev",
 	"require": {
 		"php": ">=7.0",
-		"yiisoft/yii2": "*"
+		"yiisoft/yii2": "*",
+		"ext-posix": "*"
 	},
 	"autoload": {
 		"psr-4": {
