--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,19 @@
 		"psr-4": {
 			"jcbowen\\yiiswoole\\": "./src"
 		}
-	}
+	},
+    "repositories": {
+        "packagist": {
+			"type": "composer",
+			"url": "https://packagist.org"
+		},
+        "0": {
+            "type": "composer",
+            "url": "https://packagist.org"
+        },
+        "1": {
+            "type": "composer",
+            "url": "https://packagist.phpcomposer.com"
+        }
+    }
 }
