增加 开发分支别名4.x-dev

--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,11 @@
       "Jcbowen\\yiiswoole\\": "./src"
     }
   },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "4.x-dev"
+    }
+  },
   "config": {
     "allow-plugins": {
       "yiisoft/yii2-composer": true
